updates on raw image extraction

--- a/Assignment 3/assignment_3.ipynb
+++ b/Assignment 3/assignment_3.ipynb
@@ -1006,7 +1006,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -1014,7 +1014,8 @@
      "output_type": "stream",
      "text": [
       "(1795, 256)\n",
-      "(1795,)\n"
+      "(1795,)\n",
+      "[1286  193   62  174   80]\n"
      ]
     }
    ],
@@ -4240,45 +4241,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "./LIDC-IDRI\\training\\nodules\n",
-      "./LIDC-IDRI\\training\\nodules\\Solid\n",
-      "(64, 64) axial shape\n",
-      "(64, 64) axial shape\n",
-      "(64, 64) axial shape\n",
-      "(64, 64) axial shape\n",
-      "(64, 64) axial shape\n",
-      "(64, 64) axial shape\n",
-      "(64, 64) axial shape\n",
-      "(64, 64) axial shape\n",
-      "(64, 64) axial shape\n",
-      "(64, 64) axial shape\n",
-      "(64, 64) axial shape\n",
-      "(64, 64) axial shape\n",
-      "(64, 64) axial shape\n",
-      "(64, 64) axial shape\n",
-      "(64, 64) axial shape\n",
-      "(64, 64) axial shape\n",
-      "(64, 64) axial shape\n",
-      "(64, 64) axial shape\n",
-      "(64, 64) axial shape\n",
-      "(64, 64) axial shape\n",
-      "(64, 64) axial shape\n",
-      "(64, 64) axial shape\n",
-      "(64, 64) axial shape\n",
-      "(64, 64) axial shape\n",
-      "(64, 64) axial shape\n",
-      "(64, 64) axial shape\n",
-      "(64, 64) axial shape\n",
-      "(64, 64) axial shape\n",
-      "(64, 64) axial shape\n",
-      "(64, 64) axial shape\n",
+      "original dataset with features had following labels\n",
+      "[1286  193   62  174   80] total samples: 1795\n",
+      "Creating new dataset and labels out of raw images\n",
+      "Creating dataset out of 2D patches\n",
+      "Solid\n",
+      "1282\n",
+      "Calcified\n",
+      "193\n",
+      "PartSolid\n",
+      "61\n",
+      "GroundGlassOpacity\n",
+      "174\n",
+      "SolidSpiculated\n",
+      "78\n",
       "Size of our cubes (64, 64, 64)\n"
      ]
     }
@@ -4287,30 +4270,99 @@
     "# Define a function that loads and preprocesses the raw data.\n",
     "# Your code here:\n",
     "src_dir = os.path.join(data_dir, \"training\", \"nodules\")\n",
-    "print(src_dir)\n",
-    "    \n",
-    "nodules_dir = os.path.join(src_dir, noduleTypes[0])\n",
-    "print(nodules_dir)\n",
-    "npzs = get_file_list(nodules_dir, 'npz')\n",
     "\n",
-    "for noduleType in (noduleTypes):\n",
+    "print(\"original dataset with features had following labels\")\n",
+    "print(np.unique(y,return_counts = True)[1], \"total samples:\", len(y))\n",
+    "\n",
+    "y_raw = []\n",
+    "results =  []\n",
+    "resultsAG = []\n",
+    "resultsAG2 = []\n",
+    "resultsAG3 = []\n",
+    "print(\"Creating new dataset and labels out of raw images\")\n",
+    "print(\"Creating dataset out of 2D patches\")\n",
+    "#short story: less data in the original images file, create new y values\n",
+    "for idx, noduleType in enumerate(noduleTypes):\n",
+    "    print(noduleType)\n",
     "    nodules_dir = os.path.join(src_dir, noduleType)\n",
     "    npzs = get_file_list(nodules_dir, 'npz')\n",
-    "    \n",
+    "    print(len(npzs[0]))\n",
     "    ## Own implementation\n",
     "    for idx1, f in enumerate(range(len(npzs[0]))):\n",
-    "        if idx1 > 5:\n",
-    "            break\n",
-    "        \n",
+    "        y_raw.append(idx)\n",
     "        file_path = npzs[0][f]\n",
     "        filename = npzs[1][f]\n",
     "        # axes are oriented as (z, x, y)\n",
     "        npz = np.load(file_path)\n",
     "        axial, coronal, sagittal = get_ortogonal_patches(npz['data'])\n",
-    "        print(sagittal.shape,'axial shape')\n",
-    "        \n",
+    "        results.append([axial, coronal, sagittal])\n",
+    "        resultsAG.append(axial)\n",
+    "        resultsAG2.append(coronal)\n",
+    "        resultsAG3.append(sagittal)\n",
+    "\n",
+    "\n",
     "shape_cube = npz['data'].shape\n",
     "print ('Size of our cubes',shape_cube)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 181,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[array([[-546, -203,   12, ..., -895, -882, -734],\n",
+      "       [-459, -146,  -10, ..., -917, -902, -791],\n",
+      "       [-278,  -18,   17, ..., -934, -897, -814],\n",
+      "       ...,\n",
+      "       [-871, -878, -887, ...,   60,  -48, -104],\n",
+      "       [-871, -859, -881, ...,   75,  -54, -122],\n",
+      "       [-877, -847, -861, ...,   86,  -25,  -70]], dtype=int16), array([[-935, -945, -929, ..., -815, -760, -614],\n",
+      "       [-893, -901, -890, ..., -862, -842, -752],\n",
+      "       [-846, -870, -881, ..., -869, -862, -792],\n",
+      "       ...,\n",
+      "       [ 151,   52,  -16, ..., -344, -556, -745],\n",
+      "       [ 231,  109,   13, ..., -268, -434, -685],\n",
+      "       [ 254,  191,  142, ..., -302, -312, -548]], dtype=int16), array([[-872, -895, -915, ...,  193,  -37, -619],\n",
+      "       [-838, -876, -898, ..., -277, -460, -763],\n",
+      "       [-802, -838, -858, ..., -725, -773, -834],\n",
+      "       ...,\n",
+      "       [-880, -883, -865, ..., -830, -762, -780],\n",
+      "       [-853, -852, -843, ..., -754, -693, -750],\n",
+      "       [-910, -905, -884, ..., -785, -792, -841]], dtype=int16)]\n",
+      "[[-546 -203   12 ... -895 -882 -734]\n",
+      " [-459 -146  -10 ... -917 -902 -791]\n",
+      " [-278  -18   17 ... -934 -897 -814]\n",
+      " ...\n",
+      " [-871 -878 -887 ...   60  -48 -104]\n",
+      " [-871 -859 -881 ...   75  -54 -122]\n",
+      " [-877 -847 -861 ...   86  -25  -70]]\n",
+      "[[-935 -945 -929 ... -815 -760 -614]\n",
+      " [-893 -901 -890 ... -862 -842 -752]\n",
+      " [-846 -870 -881 ... -869 -862 -792]\n",
+      " ...\n",
+      " [ 151   52  -16 ... -344 -556 -745]\n",
+      " [ 231  109   13 ... -268 -434 -685]\n",
+      " [ 254  191  142 ... -302 -312 -548]]\n",
+      "[[-872 -895 -915 ...  193  -37 -619]\n",
+      " [-838 -876 -898 ... -277 -460 -763]\n",
+      " [-802 -838 -858 ... -725 -773 -834]\n",
+      " ...\n",
+      " [-880 -883 -865 ... -830 -762 -780]\n",
+      " [-853 -852 -843 ... -754 -693 -750]\n",
+      " [-910 -905 -884 ... -785 -792 -841]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(results[0])\n",
+    "print(resultsAG[0])\n",
+    "print(resultsAG2[0])\n",
+    "print(resultsAG3[0])\n",
+    "\n"
    ]
   },
   {
