updates on raw image extraction

--- a/Assignment 3/assignment_3.ipynb
+++ b/Assignment 3/assignment_3.ipynb
@@ -4241,7 +4241,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 241,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define a function that loads and preprocesses the raw data.\n",
+    "# Your code here:\n",
+    "\n",
+    "def data_flatten(x):\n",
+    "    # gather images by 2d patch view     \n",
+    "    print(\"gathering patches\")\n",
+    "    for i in range(len(x)):\n",
+    "        for j in range(len(x[0])):\n",
+    "            x[i][j] = x[i][j].flatten()            \n",
+    "    return x\n",
+    "\n",
+    "def data_convert(data):\n",
+    "    # Convert to a normal array\n",
+    "    x = []\n",
+    "    print(\"combining 2d features and converting to numpy array\")\n",
+    "    for i in range(len(results)):\n",
+    "        # Flatten the lower levels in the list from samples* ([axial], [sagittal],[coronal]) to samples * (ax + cor + sag) \n",
+    "        x.append([y for z in data[i] for y in z])\n",
+    "    x = np.asarray(x)\n",
+    "    return x\n",
+    "    \n",
+    "\n",
+    "def load_data(folder = \"training\"):\n",
+    "    '''\n",
+    "        args\n",
+    "        @ Folder: Either \"training\" or \"test\" \n",
+    "\n",
+    "    '''\n",
+    "\n",
+    "    src_dir = os.path.join(data_dir, folder, \"nodules\")\n",
+    "\n",
+    "    print(\"original dataset with features had following labels\")\n",
+    "    print(np.unique(y,return_counts = True)[1], \"total samples:\", len(y))\n",
+    "    \n",
+    "    #Store all labels here\n",
+    "    y_raw = []\n",
+    "    #Store all data here\n",
+    "    data =  []\n",
+    "    print(\"Creating new dataset and labels out of raw images\")\n",
+    "    print(\"Creating dataset out of 2D patches\")\n",
+    "    #short story: less data in the original images file, create new y values\n",
+    "    for idx, noduleType in enumerate(noduleTypes):\n",
+    "        print(noduleType)\n",
+    "        nodules_dir = os.path.join(src_dir, noduleType)\n",
+    "        npzs = get_file_list(nodules_dir, 'npz')\n",
+    "        print(len(npzs[0]))\n",
+    "        ## Own implementation\n",
+    "        for idx1, f in enumerate(range(len(npzs[0]))):\n",
+    "            y_raw.append(idx)\n",
+    "            file_path = npzs[0][f]\n",
+    "            filename = npzs[1][f]\n",
+    "            # axes are oriented as (z, x, y)\n",
+    "            npz = np.load(file_path)\n",
+    "            axial, coronal, sagittal = get_ortogonal_patches(npz['data'])\n",
+    "            data.append([axial, coronal, sagittal])\n",
+    "            \n",
+    "    print(\"finalizing data basic preprocessing\")\n",
+    "    data = data_convert(data_flatten(data))\n",
+    "    \n",
+    "    return data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 243,
    "metadata": {},
    "outputs": [
     {
@@ -4262,107 +4330,24 @@
       "174\n",
       "SolidSpiculated\n",
       "78\n",
-      "Size of our cubes (64, 64, 64)\n"
+      "finalizing data basic preprocessing\n",
+      "gathering patches\n",
+      "combining 2d features and converting to numpy array\n",
+      "(1788, 12288)\n"
      ]
     }
    ],
    "source": [
-    "# Define a function that loads and preprocesses the raw data.\n",
-    "# Your code here:\n",
-    "src_dir = os.path.join(data_dir, \"training\", \"nodules\")\n",
+    "x_train_raw = load_data('training')\n",
     "\n",
-    "print(\"original dataset with features had following labels\")\n",
-    "print(np.unique(y,return_counts = True)[1], \"total samples:\", len(y))\n",
-    "\n",
-    "y_raw = []\n",
-    "results =  []\n",
-    "resultsAG = []\n",
-    "resultsAG2 = []\n",
-    "resultsAG3 = []\n",
-    "print(\"Creating new dataset and labels out of raw images\")\n",
-    "print(\"Creating dataset out of 2D patches\")\n",
-    "#short story: less data in the original images file, create new y values\n",
-    "for idx, noduleType in enumerate(noduleTypes):\n",
-    "    print(noduleType)\n",
-    "    nodules_dir = os.path.join(src_dir, noduleType)\n",
-    "    npzs = get_file_list(nodules_dir, 'npz')\n",
-    "    print(len(npzs[0]))\n",
-    "    ## Own implementation\n",
-    "    for idx1, f in enumerate(range(len(npzs[0]))):\n",
-    "        y_raw.append(idx)\n",
-    "        file_path = npzs[0][f]\n",
-    "        filename = npzs[1][f]\n",
-    "        # axes are oriented as (z, x, y)\n",
-    "        npz = np.load(file_path)\n",
-    "        axial, coronal, sagittal = get_ortogonal_patches(npz['data'])\n",
-    "        results.append([axial, coronal, sagittal])\n",
-    "        resultsAG.append(axial)\n",
-    "        resultsAG2.append(coronal)\n",
-    "        resultsAG3.append(sagittal)\n",
-    "\n",
-    "\n",
-    "shape_cube = npz['data'].shape\n",
-    "print ('Size of our cubes',shape_cube)\n"
+    "print(x_train_raw.shape)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 181,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[array([[-546, -203,   12, ..., -895, -882, -734],\n",
-      "       [-459, -146,  -10, ..., -917, -902, -791],\n",
-      "       [-278,  -18,   17, ..., -934, -897, -814],\n",
-      "       ...,\n",
-      "       [-871, -878, -887, ...,   60,  -48, -104],\n",
-      "       [-871, -859, -881, ...,   75,  -54, -122],\n",
-      "       [-877, -847, -861, ...,   86,  -25,  -70]], dtype=int16), array([[-935, -945, -929, ..., -815, -760, -614],\n",
-      "       [-893, -901, -890, ..., -862, -842, -752],\n",
-      "       [-846, -870, -881, ..., -869, -862, -792],\n",
-      "       ...,\n",
-      "       [ 151,   52,  -16, ..., -344, -556, -745],\n",
-      "       [ 231,  109,   13, ..., -268, -434, -685],\n",
-      "       [ 254,  191,  142, ..., -302, -312, -548]], dtype=int16), array([[-872, -895, -915, ...,  193,  -37, -619],\n",
-      "       [-838, -876, -898, ..., -277, -460, -763],\n",
-      "       [-802, -838, -858, ..., -725, -773, -834],\n",
-      "       ...,\n",
-      "       [-880, -883, -865, ..., -830, -762, -780],\n",
-      "       [-853, -852, -843, ..., -754, -693, -750],\n",
-      "       [-910, -905, -884, ..., -785, -792, -841]], dtype=int16)]\n",
-      "[[-546 -203   12 ... -895 -882 -734]\n",
-      " [-459 -146  -10 ... -917 -902 -791]\n",
-      " [-278  -18   17 ... -934 -897 -814]\n",
-      " ...\n",
-      " [-871 -878 -887 ...   60  -48 -104]\n",
-      " [-871 -859 -881 ...   75  -54 -122]\n",
-      " [-877 -847 -861 ...   86  -25  -70]]\n",
-      "[[-935 -945 -929 ... -815 -760 -614]\n",
-      " [-893 -901 -890 ... -862 -842 -752]\n",
-      " [-846 -870 -881 ... -869 -862 -792]\n",
-      " ...\n",
-      " [ 151   52  -16 ... -344 -556 -745]\n",
-      " [ 231  109   13 ... -268 -434 -685]\n",
-      " [ 254  191  142 ... -302 -312 -548]]\n",
-      "[[-872 -895 -915 ...  193  -37 -619]\n",
-      " [-838 -876 -898 ... -277 -460 -763]\n",
-      " [-802 -838 -858 ... -725 -773 -834]\n",
-      " ...\n",
-      " [-880 -883 -865 ... -830 -762 -780]\n",
-      " [-853 -852 -843 ... -754 -693 -750]\n",
-      " [-910 -905 -884 ... -785 -792 -841]]\n"
-     ]
-    }
-   ],
    "source": [
-    "print(results[0])\n",
-    "print(resultsAG[0])\n",
-    "print(resultsAG2[0])\n",
-    "print(resultsAG3[0])\n",
-    "\n"
+    "Finalize by flattening and combining"
    ]
   },
   {
