--- a/Assignment 3/assignment_3.ipynb
+++ b/Assignment 3/assignment_3.ipynb
@@ -1115,8 +1115,6 @@
     "    idxs = np.array(range(n_samples))\n",
     "    \n",
     "    print(\"Dataset has \" + str(n_samples) + \" samples\")\n",
-    "    print(\"Training set should have {} samples\".format(str(int(n_samples * (1 - val_percentage)))))\n",
-    "    print(\"Validation set should have \"  + str(int(n_samples * val_percentage)) + \" samples\")\n",
     "    \n",
     "    # initialize (empty) lists of samples that will be part of training and validation sets \n",
     "    tra_idxs = []\n",
@@ -4224,6 +4222,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Results\n",
+    "The submission above, given us a leaderboard accuracy of around 61%. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Task 3: Train a neural network with raw nodule data\n",
     "Now that you have developed your supervised learning framework using the features that we provided, repeat the procedure using raw data as input. You can use the functions provided at the beginning of this notebook to extract 2D views from 3D nodules, which could be useful to develop your network.\n",
     "\n",
@@ -4241,7 +4247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 290,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4260,21 +4266,15 @@
     "    # Convert to a normal array\n",
     "    x = []\n",
     "    print(\"combining 2d features and converting to numpy array\")\n",
-    "    for i in range(len(results)):\n",
+    "    for i in range(len(data)):\n",
     "        # Flatten the lower levels in the list from samples* ([axial], [sagittal],[coronal]) to samples * (ax + cor + sag) \n",
     "        x.append([y for z in data[i] for y in z])\n",
     "    x = np.asarray(x)\n",
     "    return x\n",
     "    \n",
     "\n",
-    "def load_data(folder = \"training\"):\n",
-    "    '''\n",
-    "        args\n",
-    "        @ Folder: Either \"training\" or \"test\" \n",
-    "\n",
-    "    '''\n",
-    "\n",
-    "    src_dir = os.path.join(data_dir, folder, \"nodules\")\n",
+    "def load_train_data():\n",
+    "    src_dir = os.path.join(data_dir, 'training', \"nodules\")\n",
     "\n",
     "    print(\"original dataset with features had following labels\")\n",
     "    print(np.unique(y,return_counts = True)[1], \"total samples:\", len(y))\n",
@@ -4282,7 +4282,7 @@
     "    #Store all labels here\n",
     "    y_raw = []\n",
     "    #Store all data here\n",
-    "    data =  []\n",
+    "    x_raw =  []\n",
     "    print(\"Creating new dataset and labels out of raw images\")\n",
     "    print(\"Creating dataset out of 2D patches\")\n",
     "    #short story: less data in the original images file, create new y values\n",
@@ -4299,17 +4299,40 @@
     "            # axes are oriented as (z, x, y)\n",
     "            npz = np.load(file_path)\n",
     "            axial, coronal, sagittal = get_ortogonal_patches(npz['data'])\n",
-    "            data.append([axial, coronal, sagittal])\n",
+    "            x_raw.append([axial, coronal, sagittal])\n",
     "            \n",
     "    print(\"finalizing data basic preprocessing\")\n",
-    "    data = data_convert(data_flatten(data))\n",
+    "    x_raw = data_convert(data_flatten(x_raw))\n",
+    "    y_raw = np.asarray(y_raw)\n",
     "    \n",
-    "    return data"
+    "    return x_raw, y_raw\n",
+    "\n",
+    "def load_test_data():\n",
+    "    src_dir = os.path.join(data_dir, 'test', \"nodules\")\n",
+    "    \n",
+    "    #Store all data here\n",
+    "    x_raw =  []\n",
+    "    print(\"Creating new dataset and labels out of raw images\")\n",
+    "    print(\"Creating dataset out of 2D patches\")\n",
+    "    #short story: less data in the original images file, create new y values\n",
+    "    \n",
+    "    npzs = get_file_list(src_dir, 'npz')\n",
+    "    ## Own implementation\n",
+    "    for idx1, f in enumerate(range(len(npzs[0]))):\n",
+    "        file_path = npzs[0][f]\n",
+    "        filename = npzs[1][f]\n",
+    "        # axes are oriented as (z, x, y)\n",
+    "        npz = np.load(file_path)\n",
+    "        axial, coronal, sagittal = get_ortogonal_patches(npz['data'])\n",
+    "        x_raw.append([axial, coronal, sagittal])\n",
+    "            \n",
+    "    x_raw = data_convert(data_flatten(x_raw))\n",
+    "    return x_raw"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 291,
    "metadata": {},
    "outputs": [
     {
@@ -4333,14 +4356,87 @@
       "finalizing data basic preprocessing\n",
       "gathering patches\n",
       "combining 2d features and converting to numpy array\n",
-      "(1788, 12288)\n"
+      "Creating new dataset and labels out of raw images\n",
+      "Creating dataset out of 2D patches\n",
+      "gathering patches\n",
+      "combining 2d features and converting to numpy array\n",
+      "(1788, 12288)\n",
+      "(243, 12288)\n"
      ]
     }
    ],
    "source": [
-    "x_train_raw = load_data('training')\n",
+    "x_train_raw, y_train_raw = load_train_data()\n",
+    "x_test_raw = load_test_data()\n",
     "\n",
-    "print(x_train_raw.shape)"
+    "print(x_train_raw.shape)\n",
+    "print(x_test_raw.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Normalization of the data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 301,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# normalize training data\n",
+    "x_raw_mean = np.mean(x_train_raw, axis=0)\n",
+    "x_raw_std  = np.std(x_train_raw, axis=0)\n",
+    "x_raw_norm = (x_train_raw - x_raw_mean)/x_raw_std"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 298,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# normalize test data\n",
+    "x_raw_mean = np.mean(x_test_raw, axis=0)\n",
+    "x_raw_std  = np.std(x_test_raw, axis=0)\n",
+    "x_test_raw = (x_test_raw - x_raw_mean)/x_raw_std"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Creating data splits for validation\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 302,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset has 1788 samples\n",
+      "Training set should have 1251 samples\n",
+      "Validation set should have 536 samples\n",
+      "validation samples = 90\n",
+      "training samples   = 1698\n",
+      "[0 0 0 ... 4 4 4]\n",
+      "[0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2\n",
+      " 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 4 4\n",
+      " 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x_train_raw, y_train_raw, x_validation_raw, y_validation_raw, val_idx = split_training_validation_datasets(x_raw_norm, y_train_raw, val_balanced=True)\n",
+    "print(y_train_raw)\n",
+    "print(y_validation_raw)"
    ]
   },
   {
