--- a/Assignment 4/assignment_4.ipynb
+++ b/Assignment 4/assignment_4.ipynb
@@ -5480,7 +5480,71 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Task 10 (optional): Tools to monitor training procedure"
+    "# Task 10 (optional): Tools to monitor training procedure\n",
+    "\n",
+    "First we define a function that retrieves the activations. In order to do so, we need to activate them by passing data through the network. We can do this by just passing an image through the network. In order to do so, we decided to pass 100 test images through the network, and for each of these images, the activations are computed.\n",
+    "\n",
+    "Later on, we will display the activations of the dense layer of a CNN architecture (not the output layer!!!). We think this is the most logical place to do it, since the dense part is the part where voerfitting is most likely.\n",
+    "\n",
+    "We also monitor the CNN weights (filters) during training."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#ASSUMPTIONS: 1. LAST LAYER, EXCLUDING THE SOFTMAX OUTPUT LAYER, IS A DENSE LAYER.\n",
+    "#             2. IN CNN: FIRST LAYER, EXCLUDING INPUT LAYER, HAS TO BE A CONV2D LAYER\n",
+    "\n",
+    "\n",
+    "# THIS IS UNTESTED, USE A CONVOLUTIONAL NEURAL NETWORK\n",
+    "# IT SHOULD WORK FOR THE NEURAL NETWORK DEFINED IN THE VERY FIRST TASK!\n",
+    "def get_activations(network):\n",
+    "    layer_outputs = [layer.output for layer in network.layers[1:]] \n",
+    "    # Creates a model that will return these outputs, given the model input\n",
+    "    activation_model = models.Model(inputs=network.input, outputs=layer_outputs) \n",
+    "    \n",
+    "    # Returns a list of five Numpy arrays: one array per layer activation\n",
+    "    \n",
+    "    result = []\n",
+    "    for i in range(10):\n",
+    "        activations = activation_model.predict(test_x[i].reshape(1,32,32,3)) \n",
+    "        result.append(activations[-2])\n",
+    "\n",
+    "    data = np.squeeze(np.asarray(result))\n",
+    "    fig, axis = plt.subplots() # il me semble que c'est une bonne habitude de faire supbplots\n",
+    "    heatmap = axis.pcolor(data, cmap=plt.cm.Blues) # heatmap contient les valeurs\n",
+    "    \n",
+    "    \n",
+    "    axis.set_yticks(np.arange(data.shape[0])+0.5, minor=False)\n",
+    "    axis.set_xticks(np.arange(data.shape[1])+0.5, minor=False)\n",
+    "    \n",
+    "    axis.invert_yaxis()\n",
+    "    axis.set_xticklabels('', minor=False)\n",
+    "    axis.set_xlabel('column j: activation value j for all predicted images')\n",
+    "    axis.set_ylabel('row i: activations for test image i')\n",
+    "    fig.set_size_inches(15, 2.5)\n",
+    "    plt.colorbar(heatmap)\n",
+    "    \n",
+    "    return fig\n",
+    "\n",
+    "\n",
+    "def display_cnn_weights(network):\n",
+    "    W = network.get_layer(name='conv2dlayer').get_weights()[0]\n",
+    "    W = network.get_weights()[0]\n",
+    "    \n",
+    "    if len(W.shape) == 4:\n",
+    "        W = np.squeeze(W)\n",
+    "        W = W.reshape((W.shape[0], W.shape[1], W.shape[2]*W.shape[3])) \n",
+    "        fig, axs = plt.subplots(5,5, figsize=(8,8))\n",
+    "        fig.subplots_adjust(hspace = .5, wspace=.001)\n",
+    "        axs = axs.ravel()\n",
+    "        for i in range(25):\n",
+    "            axs[i].imshow(W[:,:,i], cmap = 'gray')\n",
+    "            axs[i].set_title(str(i))\n",
+    "    return fig    "
    ]
   },
   {
@@ -5489,10 +5553,76 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# >>> add your code here <<<\n",
+    "# NEW TRAINING LOOP\n",
     "\n",
-    "# filters should be meaningful: not too many zeroes\n",
-    "# Activations should not have too many zeroes\n"
+    "def train_network(network, x_training, y_training, x_validation, y_validation, n_epoch, batch_size, network_filepath):\n",
+    "\n",
+    "    # lists where we will be storing values during training, for visualization purposes\n",
+    "    tra_losses = [] # list for training loss\n",
+    "    tra_accs = [] # list for training accuracy\n",
+    "    val_losses = [] # list for validation loss\n",
+    "    val_accs = [] # list for validation accuracy\n",
+    "\n",
+    "    # we want to save the parameters that give the best performance on the validation set\n",
+    "    # therefore, we store the best validation accuracy, and save the parameters to disk\n",
+    "    best_validation_accuracy = 0 # best validation accuracy\n",
+    "\n",
+    "    for epoch in range(n_epoch):\n",
+    "        st = time.time()\n",
+    "\n",
+    "        # Train your network\n",
+    "        results = network.fit(x_training,y_training, verbose=0)\n",
+    "\n",
+    "        # Get training loss and accuracy\n",
+    "        training_loss = results.history['loss']\n",
+    "        training_accuracy = results.history['acc']\n",
+    "\n",
+    "        # Add to list\n",
+    "        tra_losses.append(training_loss)\n",
+    "        tra_accs.append(training_accuracy)\n",
+    "\n",
+    "        # Evaluate performance (loss and accuracy) on validation set\n",
+    "        scores = network.evaluate(x_validation, y_validation)     \n",
+    "        validation_loss = scores[0]\n",
+    "        validation_accuracy = scores[1]\n",
+    "\n",
+    "        # Add to list\n",
+    "        val_losses.append(validation_loss)\n",
+    "        val_accs.append(validation_accuracy)\n",
+    "\n",
+    "        # (Possibly) update best validation accuracy and save the network\n",
+    "        if validation_accuracy > best_validation_accuracy:\n",
+    "            best_validation_accuracy = validation_accuracy\n",
+    "            network.save(network_filepath)\n",
+    "\n",
+    "        # Visualization of the learning curves\n",
+    "        \n",
+    "        fig = display_cnn_weights(network)    \n",
+    "\n",
+    "        display.clear_output(wait=True)\n",
+    "        display.display(plt.gcf())\n",
+    "        time.sleep(.2)\n",
+    "\n",
+    "\n",
+    "        fig = get_activations(network)\n",
+    "        display.clear_output(wait=True)\n",
+    "        display.display(plt.gcf())\n",
+    "        time.sleep(.2)\n",
+    "\n",
+    "        fig = plt.figure(figsize=(10, 5))\n",
+    "        tra_loss_plt, = plt.plot(range(len(tra_losses)), tra_losses, 'b')\n",
+    "        tra_accs_plt, = plt.plot(range(len(tra_accs)), tra_accs, 'c')\n",
+    "        val_loss_plt, = plt.plot(range(len(val_losses)), val_losses, 'g')\n",
+    "        val_acc_plt, = plt.plot(range(len(val_accs)), val_accs, 'r')\n",
+    "        plt.xlabel('epoch')\n",
+    "        plt.ylabel('loss')\n",
+    "        plt.legend([tra_loss_plt, tra_accs_plt, val_loss_plt, val_acc_plt], \n",
+    "                  ['training loss', 'training accuracy', 'validation loss', 'validation accuracy'],\n",
+    "                  loc='center left', bbox_to_anchor=(1, 0.5))\n",
+    "        plt.title('Best validation accuracy = {:.2f}%'.format(100. * best_validation_accuracy))\n",
+    "        display.clear_output(wait=True)\n",
+    "        display.display(plt.gcf())\n",
+    "        time.sleep(.2)"
    ]
   }
  ],
