done final todo

--- a/Assignment 5/assignment_5 - Copy.ipynb
+++ b/Assignment 5/assignment_5 - Copy.ipynb
@@ -1192,9 +1192,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "TODO: help work out question\n",
-    "\n",
-    "Looking at the difference in detail of smaller vessels, I would say a higher lower threshold is needed to get a higher level of detail in the thresholded results. But I don't have any clue what could be a reason for this."
+    "For optimal performance a lower threshold is needed to also include the smaller vessels and give more detail. The reason for this is that patches rather than whole images are presented during training. Patches of those regions with very fine vessels would have more non-vessel pixels than vessels of pixels, especially with the patches being labelled based on the center pixel, which might be background with very fine vessels surrounding it. This would make the network less likely to see these very fine vessels, so the probability estimate for those very small vessels might be below 0.5."
    ]
   },
   {
