--- a/Project/Data.ipynb
+++ b/Project/Data.ipynb
@@ -13,15 +13,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Challenges\n",
-    "* Normalize staining (https://towardsdatascience.com/image-augmentation-for-deep-learning-using-keras-and-histogram-equalization-9329f6ae5085)\n",
-    "* "
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -89,7 +80,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "label_count = np.unique(np.ravel(y_train), return_counts=True)\n"
+    "unique_values, unique_counts = np.unique(np.ravel(y_train), return_counts=True)\n",
+    "plt.figure(figsize=(8,6))\n",
+    "sns.barplot(unique_values, unique_counts, alpha=0.8)\n",
+    "plt.title('Label distribution of train set')\n",
+    "plt.ylabel('Number of Occurrences', fontsize=12)\n",
+    "plt.xlabel('Label', fontsize=12)\n",
+    "plt.show()"
    ]
   },
   {
@@ -98,16 +95,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#df_data = pd.read_csv('./data/train_labels.csv')\n",
-    "#df_data['id'] = df_data['id'].astype(str) + '.tif'\n",
-    "\n",
-    "#df_data_test = pd.read_csv('./data/sample_submission.csv')\n",
-    "#df_data_test['id'] = df_data_test['id'].astype(str) + '.tif'\n",
-    "\n",
-    "label_count = np.unique(np.ravel(y_train), return_counts=True)\n",
+    "unique_values, unique_counts = np.unique(np.ravel(y_valid), return_counts=True)\n",
     "plt.figure(figsize=(8,6))\n",
-    "sns.barplot(label_count.index, label_count.values, alpha=0.8)\n",
-    "plt.title('Label distribution of train set')\n",
+    "sns.barplot(unique_values, unique_counts, alpha=0.8)\n",
+    "plt.title('Label distribution of validation set')\n",
     "plt.ylabel('Number of Occurrences', fontsize=12)\n",
     "plt.xlabel('Label', fontsize=12)\n",
     "plt.show()"
@@ -154,60 +145,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next, we load the data into memory. When the parameter `ONLY_USE_SUBSET` is set, we only import a small test for testing purposes on your own machine."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "36cc6cce45c74022a9de42ffc2ee4021",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(IntProgress(value=0, max=20000), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Load data into memory\n",
-    "df_data_copy = df_data\n",
-    "if ONLY_USE_SUBSET:\n",
-    "    df_data_copy = df_data_copy[0:20000]\n",
-    "\n",
-    "x_train = []\n",
-    "y_train = np.array(df_data_copy['label'])\n",
-    "for file_path in tqdm_notebook(df_data_copy['id']):\n",
-    "    x_train.append(np.array(Image.open('data/train/{}'.format(file_path))))\n",
-    "x_train = np.array(x_train)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "Below, we create ImageDataGenerators for the train, validation, and test set. \n",
     "Augmentations can be specified below. For more information about augmentations, please inspect the [Keras documentation](https://keras.io/preprocessing/image/)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
