--- a/Project/Experimentation.ipynb
+++ b/Project/Experimentation.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -27,7 +27,7 @@
      "output_type": "stream",
      "text": [
       "INFO - ISMI - Running command 'run'\n",
-      "INFO - ISMI - Started run with ID \"43\"\n"
+      "INFO - ISMI - Started run with ID \"47\"\n"
      ]
     },
     {
@@ -41,31 +41,12 @@
       "[!] Building model\n",
       "[!] Training model\n",
       "Epoch 1/2\n",
-      "313/313 [==============================] - 18s 59ms/step - loss: 0.6445 - acc: 0.6711 - val_loss: 0.6082 - val_acc: 0.6834\n",
-      "Epoch 2/2\n",
-      "313/313 [==============================] - 17s 54ms/step - loss: 0.5825 - acc: 0.7089 - val_loss: 0.5825 - val_acc: 0.7036\n"
+      "121/313 [==========>...................] - ETA: 4:03 - loss: 0.7693 - acc: 0.6940"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO - ISMI - Completed after 0:00:44\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<sacred.run.Run at 0x2b096e322e10>"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "config = {'model': 'dense',\n",
+    "config = {'model': 'nasnet',\n",
     "               'use_augment': True,\n",
     "               'model_params': {'weights': None},\n",
     "               'epochs': 2,\n",
